# os-lem

./: .gitignore  EXTERNAL_REVIEW_PROMPT.md  HANDOFF_NEXT_SESSION.md  LICENSE  README.md  SESSION4_NEXT_STEPS.md  pyproject.toml  repair-script.py  session4_patch_a_apply.sh  session4_scaffold_modular.sh
debug/: .gitignore  export_case_a_compare.py  export_closed_box_compare.py  export_driver_front_chamber_compare.py  export_free_air_directivity_confirmation.py  export_front_chamber_throat_side_compare.py  export_hf_rolloff_fit_study.py  export_offset_line_amplitude_basis_audit.py  export_offset_line_basis_mixing_audit.py  export_offset_line_compare.py  export_offset_line_compare_harness.py  export_offset_line_contribution_compare.py  export_offset_line_directivity_sensitivity.py  export_offset_line_mouth_contract_audit.py  export_offset_line_mouth_contract_compare.py  export_offset_line_mouth_observable_expert_audit.py  export_offset_line_observer_phase_split_audit.py  export_offset_line_propagation_contract_audit.py  export_offset_line_reference_contract_audit.py  export_offset_line_segmentation_audit.py  export_offset_line_source_offset_audit.py  export_offset_line_spacing_compare.py  export_offset_line_two_band_basis_mixing_audit.py  export_rear_chamber_tapped_compare.py  export_throat_side_compare.py  hornresp_closed_box_all.txt  hornresp_offset_line_drv.frd  hornresp_offset_line_port.frd  hornresp_offset_line_reference_template.csv  hornresp_offset_line_sum.frd
docs/: Constitution  architecture.md  architecture_invariants.md  book_contract.md  capability_matrix.md  (+59 more)
(+358 files in other folders)
